test/rails.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    description: Defines how to deploy the application server
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"rails-postgresql-example:latest"},"fieldPath":
      "spec.template.spec.containers[0].image"},{"from":{"kind":"ImageStreamTag","name":"rails-postgresql-example:latest"},"fieldPath":
      "spec.template.spec.initContainers[0].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
    template.alpha.openshift.io/wait-for-ready: "true"
  creationTimestamp: "2025-03-31T11:45:10Z"
  generation: 2
  labels:
    app: rails-postgresql-example
    template: rails-postgresql-example
  name: rails-postgresql-example
  namespace: testapp
  resourceVersion: "57862"
  uid: d0674a36-5d5c-4dd9-bd33-5357e340bb22
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: rails-postgresql-example
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        name: rails-postgresql-example
      name: rails-postgresql-example
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: postgresql
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: rails-postgresql-example
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: rails-postgresql-example
        - name: POSTGRESQL_DATABASE
          value: root
        - name: SECRET_KEY_BASE
          valueFrom:
            secretKeyRef:
              key: keybase
              name: rails-postgresql-example
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: "100"
        - name: POSTGRESQL_SHARED_BUFFERS
          value: 12MB
        - name: APPLICATION_DOMAIN
        - name: APPLICATION_USER
          valueFrom:
            secretKeyRef:
              key: application-user
              name: rails-postgresql-example
        - name: APPLICATION_PASSWORD
          valueFrom:
            secretKeyRef:
              key: application-password
              name: rails-postgresql-example
        - name: RAILS_ENV
          value: production
        image: image-registry.openshift-image-registry.svc:5000/testapp/rails-postgresql-example@sha256:eee093e1af03d2e298720a9efb723470a03fc88f794658356cc258b2cdc9c2ca
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /articles
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        name: rails-postgresql-example
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /articles
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      initContainers:
      - command:
        - ./migrate-database.sh
        env:
        - name: DATABASE_SERVICE_NAME
          value: postgresql
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: rails-postgresql-example
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: rails-postgresql-example
        - name: SECRET_KEY_BASE
          valueFrom:
            secretKeyRef:
              key: keybase
              name: rails-postgresql-example
        - name: POSTGRESQL_DATABASE
          value: root
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: "100"
        - name: POSTGRESQL_SHARED_BUFFERS
          value: 12MB
        - name: APPLICATION_DOMAIN
        - name: APPLICATION_USER
          valueFrom:
            secretKeyRef:
              key: application-user
              name: rails-postgresql-example
        - name: APPLICATION_PASSWORD
          valueFrom:
            secretKeyRef:
              key: application-password
              name: rails-postgresql-example
        - name: RAILS_ENV
          value: production
        image: image-registry.openshift-image-registry.svc:5000/testapp/rails-postgresql-example@sha256:eee093e1af03d2e298720a9efb723470a03fc88f794658356cc258b2cdc9c2ca
        imagePullPolicy: IfNotPresent
        name: ruby-init-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
